# hotel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
hotels/: models.py  serializers.py  urls.py  views.py
hotels/migrations/: 0001_initial.py  0002_booking.py
hotels/tests/: test_api.py  test_e2e.py  test_unit.py
